#ifndef PAPER_COLOR_H
#define PAPER_COLOR_H

// 紙面の色（黒・白）
enum BinaryColor {
    black, white
};

#endif
